[package]
name = "arrayvec"
version = "0.3.21"
authors = ["bluss"]
license = "MIT/Apache-2.0"

description = "A vector with a fixed capacity, it can be stored on the stack too. Implements fixed capacity ArrayVec and ArrayString."
documentation = "https://docs.rs/arrayvec/"
repository = "https://github.com/bluss/arrayvec"

keywords = ["stack", "vector", "array", "data-structure", "no_std"]

[dependencies.odds]
version = "0.2.23"
default-features = false

[dependencies.nodrop]
version = "0.1.8"
path = "nodrop"
default-features = false

[dependencies.serde]
version = "1.0"
optional = true
default-features = false

[dev-dependencies.serde_test]
version = "1.0"

[dev-dependencies]
matches = { version = "0.1" }

[features]
default = ["std"]
std = ["odds/std", "nodrop/std"]
use_union = ["nodrop/use_union"]
serde-1 = ["serde"]
