[package]
name = "arrayvec"
version = "0.4.7"
authors = ["bluss"]
license = "MIT/Apache-2.0"

description = "A vector with fixed capacity, backed by an array (it can be stored on the stack too). Implements fixed capacity ArrayVec and ArrayString."
documentation = "https://docs.rs/arrayvec/"
repository = "https://github.com/bluss/arrayvec"

keywords = ["stack", "vector", "array", "data-structure", "no_std"]
categories = ["data-structures", "no-std"]

[dependencies]
nodrop = { version = "0.1.12", path = "nodrop", default-features = false }

[dependencies.serde]
version = "1.0"
optional = true
default-features = false

[dev-dependencies.serde_test]
version = "1.0"

[dev-dependencies]
matches = { version = "0.1" }
bencher = "0.1.4"

[[bench]]
name = "extend"
harness = false

[[bench]]
name = "arraystring"
harness = false

[features]
default = ["std"]
std = []
use_union = []
serde-1 = ["serde"]

[package.metadata.docs.rs]
features = ["serde-1"]

[package.metadata.release]
no-dev-version = true
