[package]
name = "nodrop-union"
version = "0.1.11"
authors = ["bluss"]

license = "MIT/Apache-2.0"

description = """
A wrapper type to inhibit drop (destructor). Implementation crate for nodrop, the untagged unions implementation (which is unstable / requires nightly) as of this writing.

***Deprecated: Use ManuallyDrop or MaybeUninit instead!***
"""
repository = "https://github.com/bluss/arrayvec"

keywords = []

[package.metadata.release]
no-dev-version = true
tag-name = "nodrop-union-{{version}}"

[badges.maintenance]
status = "deprecated"
