[package]
name = "nodrop"
version = "0.1.4"
authors = ["bluss"]

license = "MIT/Apache-2.0"

description = "A wrapper type to inhibit drop (destructor)."
documentation = "http://bluss.github.io/arrayvec/doc/nodrop"
repository = "https://github.com/bluss/arrayvec"

keywords = ["container", "drop"]

[features]

# Optional, nightly channel
# Use no drop flag. See API doc for more info.
no_drop_flag = []

[dependencies.odds]
version = "0.2"
