[package]
name = "nodrop"
version = "0.1.5"
authors = ["bluss"]

license = "MIT/Apache-2.0"

description = "A wrapper type to inhibit drop (destructor)."
documentation = "http://bluss.github.io/arrayvec/doc/nodrop"
repository = "https://github.com/bluss/arrayvec"

keywords = ["container", "drop"]

[features]
default = ["std"]

# Default, Rust 1.6+
# Use libstd
std = ["odds/std"]

# Optional, nightly channel
# Use no drop flag. See API doc for more info.
no_drop_flag = []

# Optional, nightly channel
# Use `needs_drop` to skip overwriting if not necessary
use_needs_drop = []

[dependencies.odds]
version = "0.2.12"
default-features = false
